2018-04-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* gcc 8 update, fix assertions. libtool and toolchain updates.

2.0

2017-03-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Migrate to C++11: remove unicode_char, use char32_t. Replace
	std::vector<unicode_char> with std::u32string.

1.5

2016-02-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* configure.ac: Better test for available of nl_langinfo_l().

1.3

2015-06-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* all: rebased against Unicode 8

2015-02-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier-unicode: Rename unicode.h, library name, to avoid name
	clashing with some old, forgotten, Gnome library.

2015-01-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* all: rebased against Unicode 7. Added unicode_script(), tr24
	Scripts lookup.

1.1

2014-06-02  Sam Varshavchik  <mrsam@courier-mta.com>

	* unicode.h: Add convenience definitions for several standard character
	sets in the C++ unicode:: namespace.

	* unicode.h: change iconvert::fromu::convert() to return an additional
	bool flag, an error indication.

	* unicode.h: declare "deleted" when compiling at C++11 level, or higher,
	and fix some existing C++03-style private declaration stubs.

	* unicode.h: fix pure virtual function call abort.

	* linebreaktest.C (main): Make fromu::convert return an indication
	of a failed conversion.

1.0

2014-01-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Refactored as a standalone library, changed some symbol names.